@@ -53,7 +53,10 @@ void MLV_wait_keyboard( MLV_Keyboard_button* sym, MLV_Keyboard_modifier* mod, in
 	);
 }
 
-int MLV_wait_keyboard_or_seconds( MLV_Keyboard_button* sym, MLV_Keyboard_modifier* mod, int* unicode, int seconds ){
+int MLV_wait_keyboard_or_miliseconds(
+	MLV_Keyboard_button* sym, MLV_Keyboard_modifier* mod, int* unicode, 
+	int miliseconds 
+){
 	MLV_Button_state state;
 
 	// We remove all existing event from the queue
@@ -71,18 +74,18 @@ int MLV_wait_keyboard_or_seconds( MLV_Keyboard_button* sym, MLV_Keyboard_modifie
 		(
 			(
 				resultat = (
-					MLV_wait_event_or_seconds(
+					MLV_wait_event_or_miliseconds(
 						&tmp_sym, &tmp_mod, &tmp_unicode,
 						NULL, NULL,
 						NULL, NULL, NULL,
 						&state,
-						seconds - (MLV_get_time() - time)/1000
+						miliseconds - (MLV_get_time() - time)
 					) != MLV_KEY
 				)
 			) ||
 			( state != MLV_PRESSED )
 		) && (
-			(MLV_get_time() - time) < seconds*1000
+			(MLV_get_time() - time) < miliseconds
 		)
 	);
 
@@ -93,6 +96,13 @@ int MLV_wait_keyboard_or_seconds( MLV_Keyboard_button* sym, MLV_Keyboard_modifie
 	}
 
 	return resultat;
+}
+
+int MLV_wait_keyboard_or_seconds(
+	MLV_Keyboard_button* sym, MLV_Keyboard_modifier* mod, int* unicode, 
+	int seconds 
+){
+	return MLV_wait_keyboard_or_miliseconds( sym, mod, unicode, seconds*1000 );
 }
 
 MLV_Keyboard_button MLV_convert_string_to_keyboard_button( const char* key_string ){
